--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
     <section id="inicio" class="hero">
         <h1>Ingeniero Mecatrónico especializado en máquinas CNC</h1>
-        <button>Explora mis servicios</button>
+        <button>Explora mas servicios</button>
     </section>
 
     <section id="servicios" class="services">
