--- a/index.html
+++ b/index.html
@@ -3,62 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jordy Vásquez - Ingeniero Mecatrónico</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet"></head>
+    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles.css">
+</head>
 <body>
+
+    <!-- Header Section -->
     <header>
-        <div class="logo">Jordy Vásquez</div>
-        <nav>
-            <ul>
-                <li><a href="#inicio">Inicio</a></li>
-                <li><a href="#servicios">Servicios</a></li>
-                <li><a href="#portafolio">Portafolio</a></li>
-                <li><a href="#contacto">Contacto</a></li>
-            </ul>
-        </nav>
+        <h1>jordy vasquez</h1>
+        <p>Especialista en máquinas CNC y automatización de procesos industriales</p>
+        <a href="#services">Conoce más sobre mis servicios</a>
     </header>
 
-    <section id="inicio" class="hero">
-        <h1>Ingeniero Mecatrónico especializado en máquinas CNC</h1>
-        <button>Explora mas servicios</button>
+    <!-- About Section -->
+    <section id="about">
+        <h2>Sobre mí</h2>
+        <p>Soy Jordy Vásquez, ingeniero mecatrónico con especialización en máquinas CNC, particularmente en ruteadoras. Mi enfoque es ofrecer soluciones a medida, desde mantenimiento y reparación, hasta el diseño y la automatización de procesos.</p>
     </section>
 
-    <section id="servicios" class="services">
-        <h2>Servicios</h2>
-        <div class="service-cards">
-            <div class="card">
-                <h3>Mantenimiento y Reparación</h3>
-            </div>
-            <div class="card">
-                <h3>Asesorías en compra de máquinas</h3>
-            </div>
-            <div class="card">
-                <h3>Diseño y fabricación a medida</h3>
-            </div>
-        </div>
+    <!-- Services Section -->
+    <section id="services">
+        <h2>Servicios en máquinas CNC</h2>
+            <p><strong>Mantenimiento y Reparación de Máquinas CNC:</strong> Ofrezco un servicio completo de mantenimiento preventivo y correctivo para máquinas CNC, con un enfoque en ruteadoras. Mi objetivo es garantizar que tus equipos funcionen de manera óptima, minimizando el tiempo de inactividad y maximizando la vida útil de tus máquinas. Realizo diagnósticos detallados y reparaciones precisas, asegurándome de que cada componente esté alineado con las especificaciones del fabricante. Además, proporciono recomendaciones para mejorar el rendimiento y evitar futuros problemas.</p>
+            <p><strong>Asesoría en Compra de Máquinas CNC:</strong> Seleccionar la máquina CNC adecuada es crucial para optimizar tus procesos productivos. Con mi experiencia en ruteadoras y otros tipos de máquinas CNC, te guío en todo el proceso de compra, desde la identificación de tus necesidades hasta la evaluación de las opciones más adecuadas en el mercado. Analizo factores clave como el tipo de material, el volumen de producción y las especificaciones técnicas, asegurando que inviertas en el equipo que mejor se adapta a tus objetivos, tanto en términos de rendimiento como de presupuesto.</p>
+            <p><strong>Diseño y Fabricación a Medida:</strong> Cada proyecto tiene requisitos únicos, y mi servicio de diseño y fabricación a medida está pensado para ofrecer soluciones personalizadas. Desde el diseño conceptual hasta la fabricación final, me encargo de que cada pieza o componente CNC se ajuste a tus especificaciones exactas. Utilizo tecnología de punta y una metodología basada en la precisión para garantizar que el producto final cumpla con los más altos estándares de calidad. Ya sea para prototipos o producción en serie, estoy aquí para convertir tus ideas en realidad con un enfoque a medida.</p>
+        <h3>Asesorías adicionales</h3>
+        <p><strong>Automatización de Procesos:</strong> La automatización es clave para aumentar la eficiencia y reducir los costos operativos en cualquier industria. Ofrezco asesorías personalizadas para implementar soluciones automatizadas en tus procesos productivos, desde la integración de maquinaria CNC hasta la optimización de líneas de producción completas. Evaluo cada etapa de tu proceso para identificar áreas de mejora, proponiendo soluciones prácticas y escalables que aumentarán tu productividad y la calidad de tus productos.</p>
+        <p><strong>Diseño de Productos Industriales:</strong> Con un enfoque en la funcionalidad y la innovación, te asesoro en el diseño de productos industriales que cumplan con los más altos estándares de calidad. Mi objetivo es transformar ideas en productos manufacturables y eficientes, optimizando el diseño para su producción en máquinas CNC o cualquier otro proceso automatizado. Desde el diseño inicial hasta la optimización final, garantizo que cada detalle esté alineado con las especificaciones y necesidades del proyecto.</p>
     </section>
 
-    <section id="contacto" class="contact">
-        <h2>Contacto</h2>
-        <form>
-            <input type="text" placeholder="Nombre" required>
-            <input type="email" placeholder="Correo" required>
-            <textarea placeholder="Mensaje" required></textarea>
-            <button type="submit">Enviar</button>
-        </form>
+    <!-- Contact Section -->
+    <section id="contact">
+        <h2>Contáctame</h2>
+        <p>Para más información o para solicitar una cotización, haz clic en el botón para hablar directamente conmigo.</p>
+        <a href="https://wa.me/+573197048881" target="_blank">Contáctame por WhatsApp</a>
     </section>
-
+    
     <footer>
         <p>&copy; 2024 Jordy Vásquez</p>
-        <ul>
-            <li><a href="#">Términos y Condiciones</a></li>
-            <li><a href="#">Políticas de Privacidad</a></li>
-        </ul>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html>
