--- a/index.html
+++ b/index.html
@@ -4,45 +4,73 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jordy Vásquez - Ingeniero Mecatrónico</title>
+    <title>Jordy Vasquez | Ingeniero Mecatrónico Especialista en CNC y Automatización Industrial</title>
+    <meta name="description" content="Ingeniero mecatrónico especializado en máquinas CNC, ruteadoras, automatización industrial y diseño de productos. Servicios de mantenimiento, reparación y asesoría.">
+    <meta name="keywords" content="CNC, ruteadoras CNC, automatización industrial, ingeniería mecatrónica, mantenimiento CNC, diseño industrial, Jordy Vasquez">
+    <meta name="author" content="Jordy Vasquez">
+    <meta name="robots" content="index, follow">
+    <link rel="canonical" href="https://jordyvasquez.co/" />
+    <meta property="og:title" content="Jordy Vasquez - Ingeniero Mecatrónico Especialista en CNC">
+    <meta property="og:description" content="Servicios especializados en máquinas CNC, automatización industrial y diseño de productos. Experiencia en mantenimiento y optimización de procesos.">
+    <meta property="og:image" content="URL-DE-TU-IMAGEN-DESTACADA">
+    <meta property="og:url" content="https://jordyvasquez.co/">
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
+    <script type="application/ld+json">
+    {
+        "@context": "http://schema.org",
+        "@type": "ProfessionalService",
+        "name": "Jordy Vasquez - Servicios de Ingeniería Mecatrónica",
+        "description": "Servicios especializados en máquinas CNC, automatización industrial y diseño de productos",
+        "address": {
+            "@type": "PostalAddress",
+            "addressCountry": "Colombia"
+        }
+    }
+    </script>
 </head>
 <body>
 
     <!-- Header Section -->
     <header>
-        <h1>jordy vasquez</h1>
-        <p>Especialista en máquinas CNC y automatización de procesos industriales</p>
-        <a href="#services">Conoce más sobre mis servicios</a>
+        <h1>Jordy Vasquez</h1>
+        <h2>Mecatrónico Especialista en CNC</h2>
+        <p>Experto en máquinas CNC, ruteadoras y automatización de procesos industriales en Colombia</p>
+        <nav>
+            <a href="#services" title="Ver servicios de ingeniería CNC">Conoce más sobre mis servicios</a>
+        </nav>
     </header>
 
     <!-- About Section -->
-    <section id="about">
+    <section id="about" itemscope itemtype="http://schema.org/Person">
         <h2>Sobre mí</h2>
-        <p>Soy Jordy Vásquez, ingeniero mecatrónico con especialización en máquinas CNC, particularmente en ruteadoras. Mi enfoque es ofrecer soluciones a medida, desde mantenimiento y reparación, hasta el diseño y la automatización de procesos.</p>
+        <p itemprop="description">Soy <span itemprop="name">Jordy Vásquez</span>, ingeniero mecatrónico especializado en máquinas CNC, con enfoque particular en ruteadoras industriales. Mi experiencia abarca desde mantenimiento y reparación especializada, hasta el diseño e implementación de soluciones de automatización personalizadas para optimizar procesos industriales.</p>
     </section>
 
     <!-- Services Section -->
-    <section id="services">
-        <h2>Servicios en máquinas CNC</h2>
-            <p><strong>Mantenimiento y Reparación de Máquinas CNC:</strong> Ofrezco un servicio completo de mantenimiento preventivo y correctivo para máquinas CNC, con un enfoque en ruteadoras. Mi objetivo es garantizar que tus equipos funcionen de manera óptima, minimizando el tiempo de inactividad y maximizando la vida útil de tus máquinas. Realizo diagnósticos detallados y reparaciones precisas, asegurándome de que cada componente esté alineado con las especificaciones del fabricante. Además, proporciono recomendaciones para mejorar el rendimiento y evitar futuros problemas.</p>
-            <p><strong>Asesoría en Compra de Máquinas CNC:</strong> Seleccionar la máquina CNC adecuada es crucial para optimizar tus procesos productivos. Con mi experiencia en ruteadoras y otros tipos de máquinas CNC, te guío en todo el proceso de compra, desde la identificación de tus necesidades hasta la evaluación de las opciones más adecuadas en el mercado. Analizo factores clave como el tipo de material, el volumen de producción y las especificaciones técnicas, asegurando que inviertas en el equipo que mejor se adapta a tus objetivos, tanto en términos de rendimiento como de presupuesto.</p>
-            <p><strong>Diseño y Fabricación a Medida:</strong> Cada proyecto tiene requisitos únicos, y mi servicio de diseño y fabricación a medida está pensado para ofrecer soluciones personalizadas. Desde el diseño conceptual hasta la fabricación final, me encargo de que cada pieza o componente CNC se ajuste a tus especificaciones exactas. Utilizo tecnología de punta y una metodología basada en la precisión para garantizar que el producto final cumpla con los más altos estándares de calidad. Ya sea para prototipos o producción en serie, estoy aquí para convertir tus ideas en realidad con un enfoque a medida.</p>
+    <section id="services" itemscope itemtype="http://schema.org/Service">
+        <h2 itemprop="name">Servicios en máquinas CNC</h2>
+            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
+                <p><strong>Mantenimiento y Reparación de Máquinas CNC:</strong> Ofrezco un servicio completo de mantenimiento preventivo y correctivo para máquinas CNC, con un enfoque en ruteadoras. Mi objetivo es garantizar que tus equipos funcionen de manera óptima, minimizando el tiempo de inactividad y maximizando la vida útil de tus máquinas. Realizo diagnósticos detallados y reparaciones precisas, asegurándome de que cada componente esté alineado con las especificaciones del fabricante. Además, proporciono recomendaciones para mejorar el rendimiento y evitar futuros problemas.</p>
+                <p><strong>Asesoría en Compra de Máquinas CNC:</strong> Seleccionar la máquina CNC adecuada es crucial para optimizar tus procesos productivos. Con mi experiencia en ruteadoras y otros tipos de máquinas CNC, te guío en todo el proceso de compra, desde la identificación de tus necesidades hasta la evaluación de las opciones más adecuadas en el mercado. Analizo factores clave como el tipo de material, el volumen de producción y las especificaciones técnicas, asegurando que inviertas en el equipo que mejor se adapta a tus objetivos, tanto en términos de rendimiento como de presupuesto.</p>
+                <p><strong>Diseño y Fabricación a Medida:</strong> Cada proyecto tiene requisitos únicos, y mi servicio de diseño y fabricación a medida está pensado para ofrecer soluciones personalizadas. Desde el diseño conceptual hasta la fabricación final, me encargo de que cada pieza o componente CNC se ajuste a tus especificaciones exactas. Utilizo tecnología de punta y una metodología basada en la precisión para garantizar que el producto final cumpla con los más altos estándares de calidad. Ya sea para prototipos o producción en serie, estoy aquí para convertir tus ideas en realidad con un enfoque a medida.</p>
+            </div>
         <h3>Asesorías adicionales</h3>
-        <p><strong>Automatización de Procesos:</strong> La automatización es clave para aumentar la eficiencia y reducir los costos operativos en cualquier industria. Ofrezco asesorías personalizadas para implementar soluciones automatizadas en tus procesos productivos, desde la integración de maquinaria CNC hasta la optimización de líneas de producción completas. Evaluo cada etapa de tu proceso para identificar áreas de mejora, proponiendo soluciones prácticas y escalables que aumentarán tu productividad y la calidad de tus productos.</p>
-        <p><strong>Diseño de Productos Industriales:</strong> Con un enfoque en la funcionalidad y la innovación, te asesoro en el diseño de productos industriales que cumplan con los más altos estándares de calidad. Mi objetivo es transformar ideas en productos manufacturables y eficientes, optimizando el diseño para su producción en máquinas CNC o cualquier otro proceso automatizado. Desde el diseño inicial hasta la optimización final, garantizo que cada detalle esté alineado con las especificaciones y necesidades del proyecto.</p>
+        <div itemprop="hasOfferCatalog" itemscope itemtype="http://schema.org/OfferCatalog">
+            <p><strong>Automatización de Procesos:</strong> La automatización es clave para aumentar la eficiencia y reducir los costos operativos en cualquier industria. Ofrezco asesorías personalizadas para implementar soluciones automatizadas en tus procesos productivos, desde la integración de maquinaria CNC hasta la optimización de líneas de producción completas. Evaluo cada etapa de tu proceso para identificar áreas de mejora, proponiendo soluciones prácticas y escalables que aumentarán tu productividad y la calidad de tus productos.</p>
+            <p><strong>Diseño de Productos Industriales:</strong> Con un enfoque en la funcionalidad y la innovación, te asesoro en el diseño de productos industriales que cumplan con los más altos estándares de calidad. Mi objetivo es transformar ideas en productos manufacturables y eficientes, optimizando el diseño para su producción en máquinas CNC o cualquier otro proceso automatizado. Desde el diseño inicial hasta la optimización final, garantizo que cada detalle esté alineado con las especificaciones y necesidades del proyecto.</p>
+        </div>
     </section>
 
     <!-- Contact Section -->
-    <section id="contact">
+    <section id="contact" itemscope itemtype="http://schema.org/ContactPoint">
         <h2>Contáctame</h2>
         <p>Para más información o para solicitar una cotización, haz clic en el botón para hablar directamente conmigo.</p>
-        <a href="https://wa.me/+573197048881" target="_blank">Contáctame por WhatsApp</a>
+        <a href="https://wa.me/+573197048881" target="_blank" rel="noopener" itemprop="contactType">Contáctame por WhatsApp</a>
     </section>
     
     <footer>
-        <p>&copy; 2024 Jordy Vásquez</p>
+        <p>&copy; 2024 Jordy Vásquez - Ingeniero Mecatrónico Especialista en CNC y Automatización Industrial</p>
     </footer>
 </body>
 </html>
