--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Jordy Vasquez | Ingeniero Mecatrónico Especialista en CNC y Automatización Industrial</title>
-    <meta name="description" content="Ingeniero mecatrónico especializado en máquinas CNC, ruteadoras, automatización industrial y diseño de productos. Servicios de mantenimiento, reparación y asesoría.">
-    <meta name="keywords" content="CNC, ruteadoras CNC, automatización industrial, ingeniería mecatrónica, mantenimiento CNC, diseño industrial, Jordy Vasquez">
+    <meta name="description" content="Ingeniero mecatrónico especializado en máquinas CNC, ruteadoras cnc, automatización industrial y diseño de productos. Servicios de mantenimiento, reparación y asesoría.">
+    <meta name="keywords" content="CNC, ruteadoras CNC, automatización industrial, ingeniería mecatrónica, mantenimiento CNC, diseño industrial, Jordy Vasquez, Medellin, Colombia">
     <meta name="author" content="Jordy Vasquez">
     <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://jordyvasquez.co/" />
+    <link rel="canonical" href="https://www.jordyvasquez.co/" />
     <meta property="og:title" content="Jordy Vasquez - Ingeniero Mecatrónico Especialista en CNC">
     <meta property="og:description" content="Servicios especializados en máquinas CNC, automatización industrial y diseño de productos. Experiencia en mantenimiento y optimización de procesos.">
     <meta property="og:image" content="URL-DE-TU-IMAGEN-DESTACADA">
-    <meta property="og:url" content="https://jordyvasquez.co/">
+    <meta property="og:url" content="https://www.jordyvasquez.co/">
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
     <script type="application/ld+json">
