--- a/index.html
+++ b/index.html
@@ -1,76 +1,104 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Jordy Vasquez | Ingeniero Mecatrónico Especialista en CNC y Automatización Industrial</title>
-    <meta name="description" content="Ingeniero mecatrónico especializado en máquinas CNC, ruteadoras cnc, automatización industrial y diseño de productos. Servicios de mantenimiento, reparación y asesoría.">
-    <meta name="keywords" content="CNC, ruteadoras CNC, automatización industrial, ingeniería mecatrónica, mantenimiento CNC, diseño industrial, Jordy Vasquez, Medellin, Colombia">
-    <meta name="author" content="Jordy Vasquez">
-    <meta name="robots" content="index, follow">
-    <link rel="canonical" href="https://www.jordyvasquez.co/" />
-    <meta property="og:title" content="Jordy Vasquez - Ingeniero Mecatrónico Especialista en CNC">
-    <meta property="og:description" content="Servicios especializados en máquinas CNC, automatización industrial y diseño de productos. Experiencia en mantenimiento y optimización de procesos.">
-    <meta property="og:image" content="URL-DE-TU-IMAGEN-DESTACADA">
-    <meta property="og:url" content="https://www.jordyvasquez.co/">
-    <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="styles.css">
-    <script type="application/ld+json">
-    {
-        "@context": "http://schema.org",
-        "@type": "ProfessionalService",
-        "name": "Jordy Vasquez - Servicios de Ingeniería Mecatrónica",
-        "description": "Servicios especializados en máquinas CNC, automatización industrial y diseño de productos",
-        "address": {
-            "@type": "PostalAddress",
-            "addressCountry": "Colombia"
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Jordy Vasquez - Ingeniería Mecatrónica Especializada en CNC</title>
+  <meta name="description" content="Servicios de ingeniería mecatrónica especializada en CNC y automatización industrial. Ofrecemos mantenimiento de maquinaria, asesoría en automatización y diseño industrial a medida.">
+  <meta name="keywords" content="Ingeniería mecatrónica, CNC, mantenimiento CNC, automatización industrial, diseño industrial, ruteadoras, asesoría de maquinaria, Jordy Vasquez">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
+  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css">
+  <style>
+    .group:hover .group-hover\:hidden {
+      display: none;
     }
-    </script>
+    .group:hover .group-hover\:block {
+      display: block;
+    }
+
+    /* CSS para la transición de fondo */
+    .header-bg {
+      position: absolute;
+      inset: 0;
+      background-size: cover;
+      background-position: center;
+      transition: opacity 1.5s ease-in-out;
+    }
+    .header-bg-1 {
+      background-image: url('header.webp');
+    }
+    .header-bg-2 {
+      background-image: url('header2.webp');
+    }
+  </style>
 </head>
-<body>
+<body class="bg-gray-900 text-white font-sans">
+  <!-- Header -->
+  <header class="relative bg-gray-800 h-screen overflow-hidden">
+    <div class="header-bg header-bg-1 opacity-100" id="header-bg-1"></div>
+    <div class="header-bg header-bg-2 opacity-0" id="header-bg-2"></div>
+    <div class="bg-black bg-opacity-50 absolute inset-0"></div>
+    <div class="relative z-10 flex flex-col items-center justify-center h-full text-center p-4">
+      <h1 class="text-5xl md:text-6xl font-bold text-white mb-4">Jordy Vasquez</h1>
+      <p class="text-xl md:text-2xl text-gray-200 max-w-2xl mx-auto">Ingeniero Mecatrónico especializado en CNC y automatización de procesos industriales.</p>
+      <a href="#contacto" class="mt-6 px-8 py-3 bg-orange-600 text-white rounded-md hover:bg-orange-700 transition">Contáctame</a>
+    </div>
+  </header>
 
-    <!-- Header Section -->
-    <header>
-        <h1>Jordy Vasquez</h1>
-        <h2>Mecatrónico Especialista en CNC</h2>
-        <p>Experto en máquinas CNC, ruteadoras y automatización de procesos industriales en Colombia</p>
-        <nav>
-            <a href="#services" title="Ver servicios de ingeniería CNC">Conoce más sobre mis servicios</a>
-        </nav>
-    </header>
+  <!-- Sobre mí -->
+  <section id="about" class="py-16 bg-gray-900 text-center">
+    <div class="container mx-auto px-6">
+      <h2 class="text-4xl font-semibold text-blue-500 mb-6">Sobre mí</h2>
+      <p class="text-lg text-gray-300 max-w-2xl mx-auto">Con una experiencia sólida en mantenimiento y reparación de CNC, me especializo en ruteadoras y soluciones industriales a medida. Ofrezco asesoría en compra de máquinas, automatización de procesos y diseño de productos.</p>
+    </div>
+  </section>
 
-    <!-- About Section -->
-    <section id="about" itemscope itemtype="http://schema.org/Person">
-        <h2>Sobre mí</h2>
-        <p itemprop="description">Soy <span itemprop="name">Jordy Vásquez</span>, ingeniero mecatrónico especializado en máquinas CNC, con enfoque particular en ruteadoras industriales. Mi experiencia abarca desde mantenimiento y reparación especializada, hasta el diseño e implementación de soluciones de automatización personalizadas para optimizar procesos industriales.</p>
-    </section>
-
-    <!-- Services Section -->
-    <section id="services" itemscope itemtype="http://schema.org/Service">
-        <h2 itemprop="name">Servicios en máquinas CNC</h2>
-            <div itemprop="offers" itemscope itemtype="http://schema.org/Offer">
-                <p><strong>Mantenimiento y Reparación de Máquinas CNC:</strong> Ofrezco un servicio completo de mantenimiento preventivo y correctivo para máquinas CNC, con un enfoque en ruteadoras. Mi objetivo es garantizar que tus equipos funcionen de manera óptima, minimizando el tiempo de inactividad y maximizando la vida útil de tus máquinas. Realizo diagnósticos detallados y reparaciones precisas, asegurándome de que cada componente esté alineado con las especificaciones del fabricante. Además, proporciono recomendaciones para mejorar el rendimiento y evitar futuros problemas.</p>
-                <p><strong>Asesoría en Compra de Máquinas CNC:</strong> Seleccionar la máquina CNC adecuada es crucial para optimizar tus procesos productivos. Con mi experiencia en ruteadoras y otros tipos de máquinas CNC, te guío en todo el proceso de compra, desde la identificación de tus necesidades hasta la evaluación de las opciones más adecuadas en el mercado. Analizo factores clave como el tipo de material, el volumen de producción y las especificaciones técnicas, asegurando que inviertas en el equipo que mejor se adapta a tus objetivos, tanto en términos de rendimiento como de presupuesto.</p>
-                <p><strong>Diseño y Fabricación a Medida:</strong> Cada proyecto tiene requisitos únicos, y mi servicio de diseño y fabricación a medida está pensado para ofrecer soluciones personalizadas. Desde el diseño conceptual hasta la fabricación final, me encargo de que cada pieza o componente CNC se ajuste a tus especificaciones exactas. Utilizo tecnología de punta y una metodología basada en la precisión para garantizar que el producto final cumpla con los más altos estándares de calidad. Ya sea para prototipos o producción en serie, estoy aquí para convertir tus ideas en realidad con un enfoque a medida.</p>
-            </div>
-        <h3>Asesorías adicionales</h3>
-        <div itemprop="hasOfferCatalog" itemscope itemtype="http://schema.org/OfferCatalog">
-            <p><strong>Automatización de Procesos:</strong> La automatización es clave para aumentar la eficiencia y reducir los costos operativos en cualquier industria. Ofrezco asesorías personalizadas para implementar soluciones automatizadas en tus procesos productivos, desde la integración de maquinaria CNC hasta la optimización de líneas de producción completas. Evaluo cada etapa de tu proceso para identificar áreas de mejora, proponiendo soluciones prácticas y escalables que aumentarán tu productividad y la calidad de tus productos.</p>
-            <p><strong>Diseño de Productos Industriales:</strong> Con un enfoque en la funcionalidad y la innovación, te asesoro en el diseño de productos industriales que cumplan con los más altos estándares de calidad. Mi objetivo es transformar ideas en productos manufacturables y eficientes, optimizando el diseño para su producción en máquinas CNC o cualquier otro proceso automatizado. Desde el diseño inicial hasta la optimización final, garantizo que cada detalle esté alineado con las especificaciones y necesidades del proyecto.</p>
+  <!-- Servicios -->
+  <section id="services" class="py-16 bg-gray-800 text-center">
+    <div class="container mx-auto px-6">
+      <h2 class="text-4xl font-semibold text-blue-500 mb-6">Servicios</h2>
+      <div class="flex flex-wrap justify-center gap-6">
+        <!-- Servicio 1 -->
+        <div class="w-full md:w-1/3 bg-gray-700 p-6 rounded-lg shadow-lg hover:bg-gray-600 transition-all relative group">
+          <h3 class="text-2xl font-bold text-orange-500 mb-2">Mantenimiento de CNC</h3>
+          <p class="text-gray-300 group-hover:hidden">Mantén tu maquinaria en óptimas condiciones.</p>
+          <p class="text-gray-300 hidden group-hover:block">Ofrecemos mantenimiento preventivo y correctivo especializado en maquinaria CNC para garantizar su rendimiento y prolongar su vida útil.</p>
         </div>
-    </section>
+        <!-- Servicio 2 -->
+        <div class="w-full md:w-1/3 bg-gray-700 p-6 rounded-lg shadow-lg hover:bg-gray-600 transition-all relative group">
+          <h3 class="text-2xl font-bold text-orange-500 mb-2">Asesoría en Automatización</h3>
+          <p class="text-gray-300 group-hover:hidden">Optimiza tus procesos industriales.</p>
+          <p class="text-gray-300 hidden group-hover:block">Te ayudamos a identificar y aplicar soluciones de automatización, incrementando la eficiencia y productividad en tus procesos industriales.</p>
+        </div>
+        <!-- Servicio 3 -->
+        <div class="w-full md:w-1/3 bg-gray-700 p-6 rounded-lg shadow-lg hover:bg-gray-600 transition-all relative group">
+          <h3 class="text-2xl font-bold text-orange-500 mb-2">Diseño a Medida</h3>
+          <p class="text-gray-300 group-hover:hidden">Fabricación de productos personalizados.</p>
+          <p class="text-gray-300 hidden group-hover:block">Ofrecemos diseño y fabricación a medida, desarrollando productos industriales según las necesidades específicas de cada cliente.</p>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- Contact Section -->
-    <section id="contact" itemscope itemtype="http://schema.org/ContactPoint">
-        <h2>Contáctame</h2>
-        <p>Para más información o para solicitar una cotización, haz clic en el botón para hablar directamente conmigo.</p>
-        <a href="https://wa.me/+573197048881" target="_blank" rel="noopener" itemprop="contactType">Contáctame por WhatsApp</a>
-    </section>
+  <!-- Contacto -->
+  <section id="contacto" class="py-16 bg-gray-900 text-center">
+    <div class="container mx-auto px-6">
+      <h2 class="text-4xl font-semibold text-blue-500 mb-6">Contacto</h2>
+      <p class="text-lg text-gray-300 mb-6">Si estás interesado en alguno de mis servicios o tienes alguna consulta, no dudes en contactarme.</p>
+      <a href="https://wa.me/573197048881" class="flex items-center justify-center gap-2 px-8 py-3 bg-orange-600 text-white rounded-md hover:bg-orange-700 transition">
+        <img src="https://upload.wikimedia.org/wikipedia/commons/5/5e/WhatsApp_icon.png" alt="WhatsApp" class="w-6 h-6"> WhatsApp
+      </a>
+    </div>
+  </section>
+
+  <!-- Footer -->
+  <footer class="bg-gray-800 text-center py-4">
+    <p class="text-gray-400">&copy; 2024 Jordy Vasquez. Todos los derechos reservados.</p>
+  </footer>
+
+  <script src="script.js">
     
-    <footer>
-        <p>&copy; 2024 Jordy Vásquez - Ingeniero Mecatrónico Especialista en CNC y Automatización Industrial</p>
-    </footer>
+  </script>
 </body>
 </html>
